--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -20,7 +20,6 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Get changed files
-        id: files
         run: |
           echo "Getting changed files..."
           CHANGED_PACKAGES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
@@ -28,3 +27,10 @@ jobs:
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
           | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique')
           echo $CHANGED_PACKAGES
+      
+      - name: Label PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo $GITHUB_REF
+          
