--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -32,5 +32,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo $GITHUB_REF
-          
+          echo ${{ github.event.pull_request.number }}
