--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -22,14 +22,20 @@ jobs:
       - name: Get changed files
         run: |
           echo "Getting changed files..."
-          CHANGED_PACKAGES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          CHANGED_PACKAGES=$(curl -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
           | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique')
-          echo $CHANGED_PACKAGES
+          echo "CHANGED_PACKAGES=$CHANGED_PACKAGES" >> $GITHUB_ENV
       
       - name: Label PR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo ${{ github.event.pull_request.number }}
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/labels \
+            -d '{"labels": ${{ env.CHANGED_PACKAGES }}}'
+            
