--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -25,7 +25,7 @@ jobs:
           CHANGED_PACKAGES=$(curl -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
-          | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique')
+          | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique | tostring')
           echo "CHANGED_PACKAGES=$CHANGED_PACKAGES" >> $GITHUB_ENV
       
       - name: Label PR
@@ -38,4 +38,3 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/labels \
             -d '{"labels": ${{ env.CHANGED_PACKAGES }}}'
-            
