--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -37,4 +37,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/labels \
-            -d '{"labels": ${{ env.CHANGED_PACKAGES }}}'
+            -d '{"labels": ${{ env.CHANGED_PACKAGES }} | jq | fromjson }'
