--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -33,8 +33,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo ${{ github.event.pull_request.number }}
+          PACKAGE_LABELS=$(echo ${{ env.CHANGED_PACKAGES }} | jq fromjson)
           curl -X POST \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/labels \
-            -d '{"labels": ${{ env.CHANGED_PACKAGES }} | jq | fromjson }'
+            -d "{\"labels\": $PACKAGE_LABELS }"
