--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -32,8 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo ${{ github.event.pull_request.number }}
-          PACKAGE_LABELS=$(echo ${{ env.CHANGED_PACKAGES }} | jq fromjson)
+          PACKAGE_LABELS=$(echo ${{ env.CHANGED_PACKAGES }} | jq .)
           curl -X POST \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
