--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -8,7 +8,6 @@ on:
 env:
   COMMIT_USER_EMAIL: developer@triple-corp.com
   COMMIT_USER_NAME: triple-frontend[bot]
-  CURRENT_VERSION: ${{ github.event.pull_request.milestone.title }}
 
 jobs:
   update_changelog:
@@ -19,9 +18,8 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Get changed files
+      - name: Get changed packages
         run: |
-          echo "Getting changed files..."
           CHANGED_PACKAGES=$(curl -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
