--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -10,6 +10,8 @@ on:
   pull_request_target:
     branches:
       - feat/automate-changelog
+    types:
+      - synchronize
 
 jobs:
   update_changelog:
