--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           RESPONSE=$(curl -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
-          "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}"
+          "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}")
           
           echo $RESPONSE
           # echo "CHANGED_PACKAGES=$CHANGED_PACKAGES" >> $GITHUB_ENV
