--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -25,17 +25,21 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}")
           
-          echo $RESPONSE
-          # echo "CHANGED_PACKAGES=$CHANGED_PACKAGES" >> $GITHUB_ENV
-      # | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique | tostring')
+          if [[ $(echo "$RESPONSE" | jq '.total_count') == null ]]; then
+            echo $RESPONSE | jq '.message'
+            exit 1
+          fi
 
-      # - name: Label PR
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     PACKAGE_LABELS=$(echo ${{ env.CHANGED_PACKAGES }} | jq .)
-      #     curl -X POST \
-      #       -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-      #       -H "Accept: application/vnd.github.v3+json" \
-      #       https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/labels \
-      #       -d "{\"labels\": $PACKAGE_LABELS }"
+          CHANGED_PACKAGES=$(echo $RESPONSE | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique | tostring')
+          # echo "CHANGED_PACKAGES=$CHANGED_PACKAGES" >> $GITHUB_ENV
+
+      - name: Label PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PACKAGE_LABELS=$(echo ${{ env.CHANGED_PACKAGES }} | jq .)
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/labels \
+            -d "{\"labels\": $PACKAGE_LABELS }"
