--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -25,7 +25,7 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}")
           
-          if [[ $(echo "$RESPONSE" | jq '.total_count') == null ]]; then
+          if [[ $(echo "$RESPONSE" | jq '.total_commits') == null ]]; then
             echo $RESPONSE | jq '.message'
             exit 1
           fi
