--- a/.github/workflows/pr-label.yml
+++ b/.github/workflows/pr-label.yml
@@ -30,8 +30,8 @@ jobs:
             exit 1
           fi
 
-          CHANGED_PACKAGES=$(echo $RESPONSE | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique | tostring')
-          # echo "CHANGED_PACKAGES=$CHANGED_PACKAGES" >> $GITHUB_ENV
+          PACKAGE_NAMES=$(echo $RESPONSE | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique | tostring')
+          # echo "CHANGED_PACKAGES=$PACKAGE_NAMES" >> $GITHUB_ENV
 
       - name: Label PR
         env:
